# data-migration

./: .gitignore  README.md  dev.mjs  package.json
next/: package.json
next.js/: README.md  package-lock.json  package.json
next/src/app/: layout.tsx  page.tsx
python/: README.md  menu.py  populate_db.py  pyproject.toml
python/src/: __init__.py  main.py
sql/: README.md  package.json  tsconfig.json
sql/data/: data-migration.db.sql  table_log.sql
sql/src/: server.ts
sql/src/lib/: database.ts  endpoints.ts  header.ts  index.ts  initDB.ts
sql/src/lib/sql/: getAllPdfs.ts  insertPdf.ts
sql/src/migrate/: cleanData.ts  getMigrationStatus.ts  migrateData.ts  transformData.ts
sql/src/routes/db/: create.ts  index.ts  read.ts  schema.ts
sql/src/routes/log/: create.ts  index.ts  update.ts
sql/src/routes/migrate/: clean.ts  index.ts  migrate.ts  status.ts  transform.ts
sql/src/routes/table/: index.ts
sql/src/routes/test/: test.ts
sql/types/: pdf-parse.d.ts
