[tool.poetry]
name = "data-migration-python"
version = "1.0.0"
description = "Simple Hello World project"
authors = ["Goldlabel Apps <goldlabel.apps@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^37.5.3"
inquirer = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
